--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(my_brainf_compiler C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(my_brainf_compiler interpreter.c interpreter.h)
+add_executable(my_brainf_compiler interpreter.c interpreter.h main.c)
